# laboratorio2

./: CMakeLists.txt  Chat.cpp  Chat.h  IconBadgeMonitor.cpp  IconBadgeMonitor.h  Message.h  MessageNotifier.cpp  MessageNotifier.h  Observer.h  README.md  Subject.h  User.cpp  User.h  main.cpp
test/: CMakeLists.txt  ChatTest.cpp  MessageNotifierTest.cpp  MessageTest.cpp  RunAllTests.cpp  UserTest.cpp
